# nd2

./: .coveragerc  .cruft.json  .flake8  .github_changelog_generator  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  LICENSE  MANIFEST.in  Makefile  ND2_FILE_FORMAT.md  NOTES.md  PR_DESCRIPTION.md  README.md  asv.conf.json  convert_example.py  debug_jobs.py  example_jobs.py  index.html  mkdocs.yml  nd2_parser.py  objects.inv  pyproject.toml  samples_meta.json  setup.cfg  setup.py  x.py  xm.py  z.py
.github/: ISSUE_TEMPLATE.md  TEST_FAIL_TEMPLATE.md
.github/workflows/: ci.yml  cron.yml  deploy.yml  docs.yml  test.yml
API/nd2/: index.html
API/nd2_binary/: index.html
API/structures/: index.html
benchmarks/: benchmarks.py
docker/: Dockerfile
docs/: index.md
docs/API/: nd2.md  nd2_binary.md  structures.md
nd2/: __init__.py  __init__.pyi  _chunkmap.py  _legacy.py  _n.pyx  _nd2file.pyi  _nd2file.pyx  _nd2file_legacy.pxd  _nd2file_legacy.pyi  _nd2file_legacy.pyx  _nd2sdk.pxd  _nd2sdk_v9.pxd  _util.py  _xml.py  nd2Reader_helper.c  nd2Reader_helper.h  nd2file.py  structures.py
nd2/_sdk/: __init__.py  latest.c  latest.pxd  latest.pyi  latest.pyx  picture.pxd  picture.pyx  v9.pxd  v9.pyx
reference/nd2/: index.html
reference/nd2/index_py/: index.html
reference/nd2/jobs/: index.html
reference/nd2/jobs/types/: index.html
reference/nd2/structures/: index.html
reference/nd2/tiff/: index.html
scripts/: bf_describe.py  compare.py  comparison.json  describe.py  download_samples.py  download_sdk.py  gather.py  mine_json.py  nd2_describe.py
search/: search_index.json
src/nd2/: __init__.py  _binary.py  _chunkmap.py  _clx_lite.py  _clx_xml.py  _dask_proxy.py  _fsspec.py  _index.py  _jobs_schema.py  _legacy.py  _nd2decode.py  _nd2file.py  _ome.py  _ome_zarr.py  _sdk_types.py  _tiff.py  _util.py  _xml.py  index.py  nd2file.py  opening_dask_array.py  readers.py  rescue.py  resource_backed_array.py  structures.py  tiff.py
src/nd2/_legacy/: __init__.py  _legacy.py  _legacy_xml.py
src/nd2/_parse/: _chunk_decode.py  _clx_lite.py  _clx_xml.py  _legacy_xml.py  _parse.py
src/nd2/_pysdk/: __init__.py  _chunk_decode.py  _chunked_device.py  _decode.py  _parse.py  _pysdk.py  _pysdk_BAK.py  _sdk_types.py  _structures.py  _util.py
src/nd2/_readers/: __init__.py  protocol.py
src/nd2/_readers/_legacy/: legacy_reader.py
src/nd2/_readers/_modern/: modern_reader.py
src/nd2/_sdk/: latest.pxd  latest.pyi  latest.pyx
src/nd2/jobs/: __init__.py  _schema.py  _tasks.py  schema.pyi  tasks.pyi  types.py
src/nd2/readers/: __init__.py  protocol.py
src/nd2/readers/_legacy/: _legacy_xml.py  legacy_reader.py
src/nd2/readers/_modern/: _parse.py  modern_reader.py
src/sdk/: LICENSE  version.txt
src/sdk/Linux/include/: Nd2ReadSdk.h
src/sdk/Windows/lib/: libjpeg.lib  lzma.lib  tiffxx.lib  zlib.lib
src/sdk/Windows/x86_64/lib/: jbig.lib  nd2readsdk-static.lib  tiff.lib
styles/: extra.css
tests/: conftest.py  dumplim.py  samples_meta.json  samples_metadata.json  test_aicsimage.py  test_binary.py  test_codspeed.py  test_dask_dispatch.py  test_dask_proxy.py  test_dask_wrapper.py  test_deprecations.py  test_events.py  test_index.py  test_jobs.py  test_legacy_reader.py  test_metadata.py  test_ome.py  test_ome_zarr.py  test_parse.py  test_pysdk.py  test_reader.py  test_readme.py  test_remote.py  test_rescue.py  test_rois.py  test_sdk.py  test_segfaults.py  test_tiff_write.py  test_to_ome_tif.py  test_xml.py  variant.xml  variant_CustomDataV2_0.xml
