# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "nd2"
description = "Yet another nd2 (Nikon NIS Elements) file reader"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "BSD 3-Clause License" }
authors = [{ email = "talley.lambert@gmail.com", name = "Talley Lambert" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
dependencies = ["resource-backed-dask-array", "typing-extensions", "numpy"]

[project.optional-dependencies]
legacy = ["imagecodecs"]
test = [
    "aicsimageio; python_version < '3.12'",
    "dask[array]",
    "imagecodecs",
    "lxml",
    "numpy >=1.26; python_version >= '3.12'",
    "numpy; python_version < '3.12'",
    "ome-types",
    "psutil",
    "pytest-codspeed",
    "pytest-cov",
    "pytest-pretty",
    "pytest>=6.0",
    "xarray; python_version < '3.12'",
]
dev = [
    "aicsimageio",
    "black",
    "dask[array]",
    "imagecodecs",
    "ipython",
    "mypy",
    "pre-commit",
    "psutil",
    "pytest-cov",
    "pytest",
    "rich",
    "ruff",
    "xarray",
    "types-lxml",
]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings-python"]

[project.urls]
homepage = "https://github.com/tlambert03/nd2"
repository = "https://github.com/tlambert03/nd2"
changelog = "https://github.com/tlambert03/nd2/blob/main/CHANGELOG.md"
documentation = "https://tlambert03.github.io/nd2/"

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/nd2/_version.py"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# https://beta.ruff.rs/docs/rules/
[tool.ruff]
line-length = 88
target-version = "py37"
src = ["src/nd2", "tests"]
select = [
    "E",      # style errors
    "F",      # flakes
    "D",      # pydocstyle
    "I",      # isort
    "UP",     # pyupgrade
    "S",      # bandit
    "C4",     # flake8-comprehensions
    "B",      # flake8-bugbear
    "A001",   # flake8-builtins
    "RUF",    # ruff-specific rules
    "SIM105", # contextlib.suppress
    "TID",    # tidy imports
    "TCH",    # flake8-type-checking
]
ignore = [
    "D100", # Missing docstring in public module
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D400", # First line should end with a period
    "D401", # First line should be in imperative mood
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
    "C901", # Function is too complex
]

[tool.ruff.per-file-ignores]
"src/nd2/structures.py" = ["D101", "D105"] # Fix someday
"tests/*.py" = ["D", "S"]
"scripts/*.py" = ["D", "S"]

# https://docs.pytest.org/en/6.2.x/customize.html
[tool.pytest.ini_options]
minversion = "6.0"
addopts = '--color=yes --cov-config=pyproject.toml'
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore:The distutils package is deprecated::",
    "ignore:The distutils.sysconfig module is deprecated::",
    "ignore:distutils Version classes are deprecated:",
]

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
files = "src"
strict = true
disallow_any_generics = false
show_column_numbers = true
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_typed = false

[[tool.mypy.overrides]]
module = ["imagecodecs", "resource_backed_dask_array"]
ignore_missing_imports = true

# https://coverage.readthedocs.io/en/6.4/config.html
[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "\\.\\.\\.",
    "except ImportError",
    "except NotImplementedError",
    "if __name__ == .__main__.:",
    " in flags:",                 # all the OME modality flags... don't need to test
    "return None",                # just there for mypy
]

[tool.coverage.run]
source = ["src"]

# https://github.com/mgedmin/check-manifest#configuration
[tool.check-manifest]
ignore = [
    ".github_changelog_generator",
    ".pre-commit-config.yaml",
    "tests/**/*",
    "src/nd2/_version.py",
]
