# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "nd2"
description = "Yet another nd2 (Nikon NIS Elements) file reader"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD 3-Clause License" }
authors = [{ email = "talley.lambert@gmail.com", name = "Talley Lambert" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.26.4",
    "ome-types>=0.6.2",
    "pydantic-core>=2.21.0; python_version>='3.13'",
    "resource-backed-dask-array>=0.1.0",
    "typing-extensions>=4.6.0",
]

[project.optional-dependencies]
legacy = [
    "imagecodecs>=2021.2.26",
    "imagecodecs>=2021.8.26; python_version >= '3.10'",
    "imagecodecs>=2022.7.31; python_version >= '3.11'",
    "imagecodecs>=2023.9.18; python_version >= '3.12'",
    "imagecodecs>=2024.9.22; python_version >= '3.13'",
]
tiff = ["tifffile>=2021.7.2"]
ome-zarr = [
    "yaozarrs>=0.1.1; python_version >= '3.10'",
    "zarr>=3.1; python_version >= '3.11'",
]
ome-zarr-tensorstore = [
    "yaozarrs>=0.1.1; python_version >= '3.10'",
    "tensorstore>=0.1.45",
]

[dependency-groups]
test = [
    "nd2[tiff]",
    "dask[array]>=2023.5.0",
    "imagecodecs>=2023.1.23",
    "lxml>=5.2.0",
    "psutil>=5.9.8",
    "pytest-codspeed>=4.1.1",
    "pytest-cov>=4.0.0",
    "pytest-pretty>=1.0.0",
    "pytest>=7.0.0",
    "tifffile>=2023.4.12",
    "xarray>=2023.1.0",
]
dev = [
    { include-group = "test" },
    { include-group = "docs" },
    "ipython>=8.0.0",
    "mypy>=1.18.2",
    "pdbpp>=0.11.7; sys_platform != 'win32'",
    "pre-commit-uv>=4.1.5",
    "pytest-xdist>=3.8.0",
    "rich>=14.2.0",
    "ruff>=0.14.0",
    "types-lxml>=2025.8.25",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings-python>=1.0.0",
    "mkdocs-api-autonav>=0.2.1",
]

[project.urls]
homepage = "https://github.com/tlambert03/nd2"
repository = "https://github.com/tlambert03/nd2"
changelog = "https://github.com/tlambert03/nd2/blob/main/CHANGELOG.md"
documentation = "https://tlambert03.github.io/nd2/"

[tool.uv.sources]
nd2 = { workspace = true }

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# https://docs.astral.sh/ruff/rules
[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src/nd2", "tests"]
fix = true
unsafe-fixes = true

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = [
    "E",      # style errors
    "W",      # style warnings
    "F",      # flakes
    "D",      # pydocstyle
    "D417",   # Missing argument descriptions in Docstrings
    "I",      # isort
    "UP",     # pyupgrade
    "S",      # bandit
    "C4",     # flake8-comprehensions
    "B",      # flake8-bugbear
    "A001",   # flake8-builtins
    "RUF",    # ruff-specific rules
    "SIM105", # contextlib.suppress
    "TID",    # tidy imports
    "TC",     # flake8-type-checking
]
ignore = [
    "D401", # First line should be in imperative mood
    "D100", # Missing docstring in public module
]

[tool.ruff.lint.per-file-ignores]
"src/nd2/structures.py" = ["D101", "D105"] # Fix someday
"src/nd2/jobs/types.py" = ["D101"]
"tests/*.py" = ["D", "S"]
"scripts/*.py" = ["D", "S"]

# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]
docstring-code-format = true

# https://docs.pytest.org/
[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["--color=yes", "--cov-config=pyproject.toml"]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore:The distutils package is deprecated::",
    "ignore:The distutils.sysconfig module is deprecated::",
    "ignore:distutils Version classes are deprecated:",
    "ignore:ast.Str is deprecated",
    "ignore:ast.NameConstant is deprecated",
    "ignore:::xarray",
    "ignore:Accessing the 'model_fields' attribute::",
    "ignore:Failing to pass a value:DeprecationWarning",     # xsdata
]

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
files = "src"
strict = true
disallow_any_generics = false
show_column_numbers = true
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_typed = false

[[tool.mypy.overrides]]
module = ["imagecodecs", "resource_backed_dask_array"]
ignore_missing_imports = true

# https://coverage.readthedocs.io/en/6.4/config.html
[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "\\.\\.\\.",
    "except ImportError",
    "except NotImplementedError",
    "if __name__ == .__main__.:",
    " in flags:",                 # all the OME modality flags... don't need to test
    "return None",                # just there for mypy
]

[tool.coverage.run]
source = ["src"]

# https://github.com/mgedmin/check-manifest#configuration
[tool.check-manifest]
ignore = [
    ".github_changelog_generator",
    ".pre-commit-config.yaml",
    "tests/**/*",
    "src/nd2/_version.py",
]

[tool.typos.default]
extend-ignore-identifiers-re = ["(?i)nd2?.*", "(?i)ome", "AIMD"]

[tool.typos.files]
extend-exclude = ["*.json", "**/_sdk_types.py", "src/nd2/jobs/types.py"]
