[metadata]
name = nd2
description = Yet another nd2 (Nikon NIS Elements) file reader.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlambert03/nd2
author = Talley Lambert
author_email = talley.lambert@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source Code =https://github.com/tlambert03/nd2

[options]
packages = nd2
install_requires =
    lxml
    numpy
    typing-extensions
    wrapt
python_requires = >=3.7,<3.11
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm
zip_safe = False

[options.extras_require]
dev =
    Cython
    black
    dask[array]
    flake8
    flake8-docstrings
    imagecodecs
    ipython
    isort
    mypy
    pre-commit
    psutil
    pydocstyle
    pytest
    pytest
    pytest-cov
    wurlitzer
    xarray
legacy =
    imagecodecs
    wurlitzer
testing =
    cython
    dask[array]
    psutil
    pytest
    pytest-cov
    wurlitzer
    xarray
    imagecodecs;sys_platform != "darwin" or python_version <= "3.10"

[options.package_data]
mypackage = py.typed

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore = D100, D213, D401, D413, D107, W503

[isort]
profile = black
src_paths = nd2

[pydocstyle]
match_dir = nd2
convention = numpy
add_select = D402,D415,D417
ignore = D100, D213, D401, D413, D107

[tool:pytest]
addopts = --color=yes
filter_warnings =
    error
    ignore:The distutils package is deprecated::

[mypy]
files = nd2
warn_unused_configs = True
warn_unused_ignores = True
check_untyped_defs = True
implicit_reexport = False
show_column_numbers = True
show_error_codes = True
ignore_missing_imports = True

[mypy-nd2.structures]
ignore_errors = True
